test/cli/test-mutate/mutate-existing-wildcard-panic/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    context: "invalid-value"
